Add patch endpoint
